# binderhub

./: .coveragerc  .dockerignore  .eslintrc.js  .flake8  .git-blame-ignore-revs  .gitattributes  .gitignore  .hintrc  .pre-commit-config.yaml  .prettierignore  .readthedocs.yaml  .readthedocs.yml  .travis.yml  CHANGES.md  CHANGES.rst  CONTRIBUTING.md  DEV-NOTES.md  LICENSE  MANIFEST.in  README.md  README.rst  RELEASE.md  chartpress.yaml  conftest.py  dev-config.yaml  dev-requirements.txt  minikube-config.yaml  noxfile.py  package.json  paper.md  pyproject.toml  readthedocs.yml  requirements.txt  setup.cfg  setup.py  setupTests.js  tsconfig.json  versioneer.py  webpack.config.js
.circleci/: config.yml
.github/: ISSUE_TEMPLATE.md  dependabot.yaml
.github/workflows/: codeql-analysis.yml  diff.yml  eslint.yml  jest.yml  playwright.yaml  publish.yml  release.yaml  test-chart.yaml  test-docker-build.yaml  test-docs.yaml  test.yml  watch-dependencies.yaml
appendix/templates/: login.html
binderhub/: __init__.py  __main__.py  _version.py  app.py  base.py  binderspawner_mixin.py  build.py  build_local.py  builder.py  config.py  events.py  exponential.py  health.py  index.html  launcher.py  log.py  main.py  metrics.py  quota.py  ratelimit.py  ratelimitapp.py  redirect.py  registry.py  repoproviders.py  traitlets.py  utils.py
binderhub-service/: Chart.yaml  values.schema.yaml  values.yaml
binderhub-service/mounted-files/: binderhub_config.py
binderhub-service/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  ingress.yaml  role.yaml  rolebinding.yaml  secret.yaml  service.yaml  serviceaccount.yaml
binderhub/event-schemas/: launch.json
binderhub/handlers/: repoproviders.py
binderhub/static/: index.css  index.js  loading.css  settings.js
binderhub/templates/: about.html  autodetect.html  beta.html  (+7 more)
builder/: app.py  build.py  github.py  index.html  main.py  redirect.py
builderhub/: app.py  build.py  github.py  index.html  redirect.py
ci/: check_embedded_chart_code.py  common  deploy.sh  embed-chart-files.py  install.sh  publish  publish-id_rsa.enc  refreeze  test-auth  test-helm  test-main  travis-docker-fix
doc/: Makefile  age-checker.rst  api.rst  authentication.rst  conf.py  contributor-guide.rst  cors.rst  create-cloud-resources.rst  create-k8s-cluster.rst  customizing.rst  debug.rst  deploy.rst  diagram.rst  doc-requirements.txt  docker-hub-registry.rst  environment.yml  eventlogging.rst  faq.rst  federation.rst  getting-started.rst  https.rst  index.rst  known-deployments.rst  make.bat  overview.rst  setup-binderhub.rst  setup-cluster-tools.rst  setup-dns.rst  setup-registry.rst  setup.rst  turn-off.rst
docs/: Makefile  README.md  make.bat  requirements.txt
examples/: README.rst  binder-api.py  builder_config.py
helm-chart/: .gitignore  LICENSE  Makefile  README.md  build.py  chartpress.yaml  dev-config-pebble.yaml  dev-config.yaml  minikube-binder.yaml
integration-tests/: conftest.py  test_ui.py
testing/: minikube-config.yaml
tests/: conftest.py  repoproviders_test.py
tools/: generate-json-schema.py  regenerate_secrets.py  validate-against-schema.py
(+225 files in other folders)
