[build-system]
requires = [
  "jupyter-packaging >= 0.10",
  "setuptools >= 40.9.0",
  "wheel",
]
build-backend = "setuptools.build_meta"


# black is used for autoformatting Python code
[tool.black]
# target-version should be all supported versions, see
# https://github.com/psf/black/issues/751#issuecomment-473066811
target-version = ["py38", "py39", "py310", "py311"]


# isort is used for autoformatting Python code
[tool.isort]
profile = "black"


# pytest is used for running Python based tests
[tool.pytest.ini_options]
addopts = "--verbose --color=yes --durations=10"
asyncio_mode = "auto"
testpaths = ["tests"]
timeout = "60"

# pytest-cov / coverage is used to measure code coverage of tests
[tool.coverage.run]
omit = [
  "binderhub/tests/*",
  "binderhub/_version.py",
  "versioneer.py",
]
parallel = true
