[build-system]
requires = [
  "jupyter-packaging >= 0.10",
  "setuptools >= 40.9.0",
  "wheel",
]
build-backend = "setuptools.build_meta"


# black is used for autoformatting Python code
[tool.black]
# target-version should be all supported versions, see
# https://github.com/psf/black/issues/751#issuecomment-473066811
target-version = ["py310", "py311", "py312"]


# The default isort output conflicts with black autoformatting.
# Tell isort to behave nicely with black
# See https://pycqa.github.io/isort/docs/configuration/black_compatibility.html
# for more information.
[tool.isort]
profile = "black"


# pytest is used for running Python based tests
[tool.pytest.ini_options]
# Run playwright tests only on firefox
# Retain playwright traces after failing tests, to help with debugging
addopts = "--verbose --color=yes --durations=10 --browser firefox --tracing retain-on-failure"
asyncio_mode = "auto"
testpaths = ["tests"]
timeout = "60"

# pytest-cov / coverage is used to measure code coverage of tests
[tool.coverage.run]
omit = [
  "binderhub/tests/*",
  "binderhub/_version.py",
  "versioneer.py",
]
parallel = true
